# QAlgo

./: README.md  pyproject.toml
.github/workflows/: ci_test.yml
src/qalgo/: grover.py  hhl.py  phase.py  qft.py  random.py  stateprep.py
test/: test_grover.py  test_hhl.py  test_phaseestimation.py  test_qft.py  test_random.py  test_stateprep.py
