[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qalgo"
version = "0.0.1a2"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "Quantum Algorithms implemented in Qiskit"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["quantum", "qiskit"]
requires-python = ">=3.11"
classifiers = [
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers"
]
dependencies = [
    "numpy", "qiskit"
]

[project.urls]
Repository = "https://github.com/stephenhky/QAlgo"
Issues = "https://github.com/stephenhky/QAlgo/issues"

[tool.setuptools]
packages = [
    "qalgo"
]
zip-safe = false
package-dir = {"" = "src"}

[project.optional-dependencies]
test = ["pytest", "qiskit_aer"]

